# RedLoop

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  docker-compose_dev.yml  redloop.py  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  api_reference.md  debug_kestra.py  pyproject.toml  register_flow.py  test_trigger.py
backend/app/: main.py
backend/app/api/: routes.py  webhooks.py
backend/app/core/: __init__.py  adversary.py  defender.py  kestra_client.py  utils.py  websocket_manager.py
backend/app/models/: __init__.py  schemas.py
data/: attack_vectors.json
docs/: AIAGENTSASSEMBLE.md  DevSecOps-Autopilot.md  KESTRA_API_REFERENCE.md  backend.md  cline.md  cline_manual.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json
frontend/app/: ClientLayout.tsx  api.ts  globals.css  layout.tsx  page.tsx  types.ts
frontend/app/components/: BattleDuel.tsx  HeroVisual.tsx  Icon.tsx  MagneticButton.tsx  NeuralGrid.tsx  ServerStatus.tsx  UI.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/components/: DownloadPanel.tsx  ExecutionControls.tsx  ExecutionStatus.tsx  LiveTerminal.tsx  ScanHistory.tsx  ScanReport.tsx
frontend/public/: hero-bg.webm
kestra/: Dockerfile  application.yaml
kestra/flows/: adversary_agent.yaml  defender_agent.yaml  redloop_orchestrator.yaml  redloop_orchestrator_v1.yaml  summarizer_agent.yaml
prompts/: adversary.md  defender.md
scripts/: encode_secrets.sh
