[project]
name = "backend"
version = "0.1.0"
description = "RedLoop Backend - AI-powered security scanning pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
